--- a/css/master.css
+++ b/css/master.css
@@ -424,3 +424,42 @@
         
       menu #menu_footer { float: right; font-size: 10px; margin-top: 10px; margin-right: 20px; padding-top: 10px; color: #bbb; }
       menu #menu_footer a { text-transform: none; letter-spacing: 0px; font-size: 12px; color: #999; }
+
+	/*  RADIAL MENU
+	    ------------------------------------------- */
+	  	.radial_container { 
+			position:relative; 
+			left:125px; 
+			top: 150px; 
+			width:100px; 
+			height:100px; 
+			text-align:center;
+		}
+
+		.radial_div_item {
+			background-color:grey;
+			width:75%;
+			height:30px;
+			padding:10px;
+			color:white;
+			-webkit-border-radius:40px;
+			-moz-border-radius:40px;
+			font-size:	2em;
+			z-index:	1000;
+		}
+		
+		.radial_div_item.highlight {
+			background-color:	darkred;
+		}
+		
+		.radial_div_item sup {
+			font-size:	8px;
+		}
+
+		.radial_div_item.active { 
+			background-color:#511; 
+			color:white;
+			padding: 10px; 
+			-webkit-border-radius:40px;
+			-moz-border-radius:40px;
+		}
